--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <li><a target="_blank"
                                         href="https://chat-maphong-123.netlify.app/">https://chat-maphong-123.netlify.app/</a></li>
                                 <li><a target="_blank"
-                                        href="https://hungry-goldwasser-d4b691.netlify.app/">https://hungry-goldwasser-d4b691.netlify.app/</a></li>
+                                        href="https://cart-context-api.netlify.app/">https://cart-context-api.netlify.app/</a></li>
                                 <li><a target="_blank"
                                         href="https://laptrinhweb-dazzling-williams-564c15.netlify.app/">https://laptrinhweb-dazzling-williams-564c15.netlify.app/</a></li>
                             </div>
