--- a/index.html
+++ b/index.html
@@ -17,44 +17,46 @@
             <div class="container-layout-main">
                 <div class="container-left">
                     <div class="container-left-main">
-                        <p class="p-0">INFORMATION</p>
+                        <p class="p-0">PERSONAL INFORMATION</p>
 
-                        <div class="container-left-img">
-                            <img
-                                src="img/132788658_1390817151267698_5425904716748683392_n.jpg">
-                        </div>
-                        <div class="container-left-contact">
-                            <p class="contact">Contact</p>
-                            <p class="p-1">Vo Ngoc Chinh</p>
-                            <p class="p-4"><span>Sex</span> Male | <span>Date</span>
-                                14/10/2000</p>
-                            <div class="contact-div-item">
-                                <p><strong>FaceBook :</strong></p>
-                                <p class="item-p-3">www.facebook.com/ngocchinh1410</p>
+                        <div class="div-contact-cv">
+                            <div class="container-left-img">
+                                <img
+                                    src="img/132788658_1390817151267698_5425904716748683392_n.jpg">
                             </div>
-                            <div class="contact-div-item">
-                                <p><strong>Address :</strong></p>
-                                <p class="item-p-3">Thang Binh,Quang
-                                    Nam</p>
+                            <div class="container-left-contact">
+                                <!-- <p class="contact">Contact</p> -->
+                                <p class="p-1">Vo Ngoc Chinh</p>
+                                <p class="p-4"><span>Sex</span> Male | <span>
+                                        Date of birth Date</span>
+                                    14/10/2000 | <span>Nationality </span>
+                                    Vietnamese</p>
+                                <div class="contact-div-item">
+                                    <p><strong>FaceBook :</strong> <span
+                                            class="item-p-3">www.facebook.com/ngocchinh1410</span></p>
+                                </div>
+                                <div class="contact-div-item">
+                                    <p><strong>Address :</strong> <span
+                                            class="item-p-3">Bình Giang ,Thang Binh,Quang
+                                            Nam</span></p>
+
+                                </div>
+                                <div class="contact-div-item">
+                                    <p><strong>Phone :</strong> <span
+                                            class="item-p-3">(+084) 763 717 084</span></p>
+                                </div>
+                                <div class="contact-div-item">
+                                    <p><strong>Email :</strong> <span
+                                            class="item-p-3">Ngocchinh1410@gmail.com</span></p>
+                                </div>
+                                <!-- <div class="container-left-contact">
+                                    <p class="contact">Languages</p>
+                                    <div class="contact-div-item">
+                                        <p>English</p>
+                                    </div>
+                                </div> -->
                             </div>
-                            <div class="contact-div-item">
-                                <p><strong>Phone :</strong></p>
-                                <p class="item-p-3">(+084) 763 717 084</p>
-                            </div>
-                            <div class="contact-div-item">
-                                <p><strong>Email :</strong></p>
-                                <p class="item-p-3">Ngocchinh1410@gmail.com</p>
-                            </div>
-                            <div class="contact-div-item">
-                                <p><strong>Email-2 :</strong></p>
-                                <p class="item-p-3">Vongocchinh14102000@gmail.com</p>
-                            </div>
-                        </div>
-                        <div class="container-left-contact">
-                            <p class="contact">Languages</p>
-                            <div class="contact-div-item">
-                                <p>English</p>
-                            </div>
+
                         </div>
 
                     </div>
@@ -109,7 +111,8 @@
                             <div class="container-item-main-right-skill">
                                 <ul>
                                     <li>React-Js(Redux, Redux-thunk, React hook,
-                                        React class component,React Context-Api,Redux Saga)</li>
+                                        React class component,React
+                                        Context-Api,Redux Saga)</li>
                                 </ul>
                             </div>
                         </div>
