--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                                 </div>
                                 <div class="contact-div-item">
                                     <p><strong>Address :</strong> <span
-                                            class="item-p-3">Bình Giang ,Thang Binh,Quang
+                                            class="item-p-3">Bình Giang ,Thang
+                                            Binh,Quang
                                             Nam</span></p>
 
                                 </div>
@@ -82,27 +83,12 @@
                         <div class="container-right-main-item-top">
                             <p class="summary">Job-related skills</p>
                             <div class="container-item-main-right-skill">
-                                <ul>
-                                    <li>C++
-                                    </li>
-                                    <li>Java
-                                    </li>
-                                    <li>Js
-                                    </li>
-                                    <li>Php
-                                    </li>
-                                    <li>HTML</li>
-                                    <li>Css/Scss</li>
-                                    <li>MS Office 365</li>
-                                    <li>Git/bitbucket</li>
-                                    <li>MySQL</li>
-                                    <li>SQL Server</li>
-                                    <li>Jsp-Servlet</li>
-                                    <li>React</li>
-                                    <li>NodeJs</li>
-                                    <li>FireBase</li>
-                                    <li>Auth0</li>
-                                </ul>
+                                <p class="pp">C++,Java,Js,Php,HTML,CSS,SCSS,MS OFFICE
+                                    365,Git/bitbucket,
+                                    MySQL,Jsp-Servlet,SQL
+                                    Server,React,NodeJs,FireBase
+                                    ,Auth0
+                                </p>
 
                             </div>
                         </div>
