--- a/index.html
+++ b/index.html
@@ -81,15 +81,24 @@
                             </p>
                         </div>
                         <div class="container-right-main-item-top">
-                            <p class="summary">Job-related skills</p>
-                            <div class="container-item-main-right-skill">
-                                <p class="pp">C++,Java,Js,Php,HTML,CSS,SCSS,MS OFFICE
+                            <p class="summary">PERSONAL SKILLS</p>
+                            <div class="container-experience">
+                                <div class="container-experience-li">
+                                    <a><strong>Job-related skills</strong></a>
+                                </div>
+                                <li>C++,Java,Js,Php,HTML,CSS,SCSS,MS OFFICE
                                     365,Git/bitbucket,
                                     MySQL,Jsp-Servlet,SQL
                                     Server,React,NodeJs,FireBase
                                     ,Auth0
-                                </p>
-
+                                </li>
+                            </div>
+                            <div class="container-experience">
+                                <div class="container-experience-li">
+                                    <a><strong>Languages</strong></a>
+                                </div>
+                                <li>English
+                                </li>
                             </div>
                         </div>
                         <div class="container-right-main-item-top">
@@ -144,8 +153,8 @@
                         <div class="container-right-main-item-top">
                             <p class="summary">Education</p>
                             <div class="container-experience">
-                                <li> High school TIEU LA JAN 2015 - DEC 2018</li>
-                                <li>University SU PHAM JAN 2018 - DEC 2022.</li>
+                                <li> High school TIEU LA , JAN 2015 - DEC 2018</li>
+                                <li>University SU PHAM , JAN 2018 - DEC 2022.</li>
                             </div>
                         </div>
                         <div class="container-right-main-item-top">
