--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <div class="div-contact-cv">
                             <div class="container-left-img">
                                 <img
-                                    src="img/132788658_1390817151267698_5425904716748683392_n.jpg">
+                                    src="img/Screenshot_2021-06-09_141932-removebg-preview.png">
                             </div>
                             <div class="container-left-contact">
                                 <!-- <p class="contact">Contact</p> -->
@@ -86,11 +86,11 @@
                                 <div class="container-experience-li">
                                     <a><strong>Job-related skills</strong></a>
                                 </div>
-                                <li>C++,Java,Js,Php,HTML,CSS,SCSS,MS OFFICE
-                                    365,Git/bitbucket,
-                                    MySQL,Jsp-Servlet,SQL
-                                    Server,React,NodeJs,FireBase
-                                    ,Auth0
+                                <li>C++, Java, Js, Php, HTML, CSS, SCSS, MS OFFICE
+                                    365 , Git/bitbucket, 
+                                    MySQL, Jsp-Servlet, SQL
+                                    Server, React, NodeJs, FireBase
+                                    , Auth0
                                 </li>
                             </div>
                             <div class="container-experience">
